@@ -1,6 +1,10 @@
 # Looking for user defined CLHEP_VERSION
-if( ! $?CLHEP_VERSION) then
+
+if( ! $?CLHEP_VERSION || $overwrite == "overwrite") then
 	setenv CLHEP_VERSION $DEFAULT_CLHEP_VERSION
+else if ($CLHEP_VERSION != $DEFAULT_CLHEP_VERSION) then
+	echo " ! Attention: CLHEP is already set at "$CLHEP_VERSION" instead of "$DEFAULT_CLHEP_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 
 setenv CLHEP_BASE_DIR $JLAB_SOFTWARE/clhep/$CLHEP_VERSION
