@@ -1,6 +1,9 @@
 # Looking for user defined GEANT4_VERSION
-if( ! $?GEANT4_VERSION) then
+if( ! $?GEANT4_VERSION || $overwrite == "overwrite") then
 	setenv GEANT4_VERSION $DEFAULT_GEANT4_VERSION
+else if ($GEANT4_VERSION != $DEFAULT_GEANT4_VERSION) then
+	echo " ! Attention: GEANT4 is already set at "$GEANT4_VERSION" instead of "$DEFAULT_GEANT4_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 
 setenv G4VERSION  $GEANT4_VERSION
