@@ -5,8 +5,11 @@ set path = ($JLAB_SOFTWARE/bin $path)
 
 
 ## GEMC
-if( ! $?GEMC_VERSION) then
+if( ! $?GEMC_VERSION || $overwrite == "overwrite") then
 	setenv GEMC_VERSION $DEFAULT_GEMC_VERSION
+else if ($GEMC_VERSION != $DEFAULT_GEMC_VERSION) then
+	echo " ! Attention: GEMC is already set at "$GEMC_VERSION" instead of "$DEFAULT_GEMC_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 
 if( ! $?GEMC) then
@@ -23,10 +26,12 @@ set path = ($GEMC/source $GEMC/io $path)
 
 
 ## JANA
-if( ! $?JANA_VERSION) then
+if( ! $?JANA_VERSION || $overwrite == "overwrite") then
 	setenv JANA_VERSION $DEFAULT_JANA_VERSION
+else if ($JANA_VERSION != $DEFAULT_JANA_VERSION) then
+	echo " ! Attention: JANA is already set at "$JANA_VERSION" instead of "$DEFAULT_JANA_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
-
 if( ! $?JANA_HOME) then
 	setenv JANA_HOME $JLAB_SOFTWARE/jana/$JANA_VERSION
 endif
@@ -38,8 +43,11 @@ endif
 
 
 ## Scons Scripts
-if( ! $?SCONS_BM_VERSION) then
+if( ! $?SCONS_BM_VERSION || $overwrite == "overwrite") then
 	setenv SCONS_BM_VERSION $DEFAULT_SCONS_BM_VERSION
+else if ($SCONS_BM_VERSION != $DEFAULT_SCONS_BM_VERSION) then
+	echo " ! Attention: the SCONS build system is already set at "$SCONS_BM_VERSION" instead of "$DEFAULT_SCONS_BM_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 if( ! -d $JLAB_ROOT/$JLAB_VERSION/scons_bm/$SCONS_BM_VERSION ) then
 	echo " ? Attention: No Scons Script installation found."
@@ -51,8 +59,11 @@ setenv SCONSFLAGS  "--site-dir=${JLAB_ROOT}/${JLAB_VERSION}/scons_bm/$SCONS_BM_V
 
 
 ## EVIO
-if( ! $?EVIO_VERSION) then
+if( ! $?EVIO_VERSION || $overwrite == "overwrite") then
 	setenv EVIO_VERSION $DEFAULT_EVIO_VERSION
+else if ($EVIO_VERSION != $DEFAULT_EVIO_VERSION) then
+	echo " ! Attention: EVIO is already set at "$EVIO_VERSION" instead of "$DEFAULT_EVIO_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 if( ! $?EVIO) then
 	setenv EVIO $JLAB_SOFTWARE/evio/$EVIO_VERSION
@@ -68,8 +79,11 @@ setenv LD_LIBRARY_PATH ${EVIO}/lib:${LD_LIBRARY_PATH}
 ## CCDB
 # It needs python version 2.7
 # The related path lines will be removed once 2.7 is default at JLab
-if( ! $?CCDB_VERSION) then
+if( ! $?CCDB_VERSION || $overwrite == "overwrite") then
 	setenv CCDB_VERSION $DEFAULT_CCDB_VERSION
+else if ($CCDB_VERSION != $DEFAULT_CCDB_VERSION) then
+	echo " ! Attention: CCDB is already set at "$CCDB_VERSION" instead of "$DEFAULT_CCDB_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 if( ! $?CCDB_HOME) then
 	setenv CCDB_HOME $JLAB_SOFTWARE/ccdb/ccdb"-"$CCDB_VERSION".00"
@@ -83,7 +97,6 @@ if( ! $?CCDB_HOME) then
 
 	## user
 	setenv CCDB_USER $USER
-
 endif
 if( ! -d $CCDB_HOME/lib ) then
 	echo " ? Attention: No CCDB installation found."
@@ -94,8 +107,11 @@ endif
 
 ## BANKS
 # Looking for user defined BANKS_VERSION
-if( ! $?BANKS_VERSION) then
+if( ! $?BANKS_VERSION || $overwrite == "overwrite") then
 	setenv BANKS_VERSION $DEFAULT_BANKS_VERSION
+else if ($BANKS_VERSION != $DEFAULT_BANKS_VERSION) then
+	echo " ! Attention: BANKS is already set at "$BANKS_VERSION" instead of "$DEFAULT_BANKS_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 if( ! $?BANKS) then
 	setenv BANKS    $JLAB_SOFTWARE/banks/$BANKS_VERSION
