@@ -1,4 +1,4 @@
-# EVIO does not need versioning
+# MYSQL does not need versioning
 # Looking for user defined EVIO_LOCATION
 if( ! $?MYSQL) then
 	setenv MYSQL $JLAB_SOFTWARE/mysql
