@@ -1,6 +1,9 @@
 # Looking for user defined QT_VERSION
-if( ! $?QT_VERSION) then
+if( ! $?QT_VERSION || $overwrite == "overwrite") then
 	setenv QT_VERSION $DEFAULT_QT_VERSION
+else if ($QT_VERSION != $DEFAULT_QT_VERSION) then
+	echo " ! Attention: QT is already set at "$QT_VERSION" instead of "$DEFAULT_QT_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 
 if(`uname` == "Linux") then
