@@ -1,6 +1,9 @@
 # Looking for user defined ROOT_VERSION
-if( ! $?ROOT_VERSION) then
+if( ! $?ROOT_VERSION || $overwrite == "overwrite") then
 	setenv ROOT_VERSION $DEFAULT_ROOT_VERSION
+else if ($ROOT_VERSION != $DEFAULT_ROOT_VERSION) then
+	echo " ! Attention: QT is already set at "$ROOT_VERSION" instead of "$DEFAULT_ROOT_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 
 if(! $?ROOTSYS) then
