@@ -1,6 +1,9 @@
 # Looking for user defined XERCESC_VERSION
-if( ! $?XERCESC_VERSION) then
+if( ! $?XERCESC_VERSION  || $overwrite == "overwrite")  then
 	setenv XERCESC_VERSION $DEFAULT_XERCESC_VERSION
+else if ($XERCESC_VERSION != $DEFAULT_XERCESC_VERSION) then
+	echo " ! Attention: QT is already set at "$XERCESC_VERSION" instead of "$DEFAULT_XERCESC_VERSION"."
+	echo "   You can use the overwrite option to the source command to superseed this."
 endif
 
 
