@@ -9,7 +9,8 @@
 - removed SunOs - aww aww...
 - default compiler for mac is clang not gcc anymore
 - for red-hat line, script should now be general, assuming the format will not change
-
+- jana version updated to 0.7.4p2 for JLAB_VERSION 1.3
+- added overwrite option to scheme
 
 12/3/15
 - changed ccdb naming conventions
